--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,11 @@
     "build": "vite build",
     "lint": "eslint pokedex-app",
     "preview": "vite preview",
-    "server": "npx json-server db.json --port 3001"
+    "server": "npx json-server database/db.json --port 3001"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.9.0",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
