--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,7 @@
     "dev": "vite --port 3000",
     "build": "vite build",
     "lint": "eslint pokedex-app",
-    "preview": "vite preview",
-    "server": "npx json-server db.json --port 3001"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
